# osed

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONNECTORS.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  init-repo.sh
connectors/regulatory/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.md  pyproject.toml
connectors/regulatory/tests/: test_courtlistener.py  test_ecfr.py  test_envelope.py  test_federal_register.py  test_govinfo.py  test_http.py  test_regulations_gov.py  test_server.py  test_smoke_live.py
evals/: README.md  pyproject.toml
evals/broken-variants/drafting-no-banner/: SKILL.md
evals/fixtures/drafting/: caa-304-deadline-complaint.json  caa-304-deadline-complaint.out.md  caa-304-emissions-notice.json  caa-304-emissions-notice.out.md  caa-304-failure-to-act-notice.json  caa-304-failure-to-act-notice.out.md  consent-decree-deadline.json  consent-decree-deadline.out.md  currency-flagged.json  currency-flagged.out.md  cwa-304m-deadline-notice.json  cwa-304m-deadline-notice.out.md  cwa-505-deadline-complaint.json  cwa-505-deadline-complaint.out.md  cwa-505-missing-permit.json  (+15 more)
evals/tests/: test_assertions.py  test_caa_304_examples.py  test_claude_cli.py  test_fixtures.py  test_freshness.py  test_golden_examples.py  test_grade.py  test_guide_docs.py  test_intake.py  test_judge.py  test_live_drafting.py  test_live_negative_control.py  test_live_red_team.py  test_markers.py  test_models.py  test_negative_control.py  test_pipeline.py  test_report.py  test_runner.py  test_state_era_packets.py
(+180 files in other folders)
