[project]
name = "osed-evals"
version = "0.1.0"
description = "Eval & red-team harness that verifies OSED skills obey the six design invariants."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osed_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: tests that invoke `claude -p` (skill runs / LLM judge). Deselected by default.",
]
addopts = "-m 'not live'"
