[project]
name = "osed-connectors"
version = "0.1.0"
description = "OSED Gap Analysis MCP connector — thin, safeguarded wrappers over federal regulatory APIs."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3,<4",
    "httpx>=0.27",
    "pydantic>=2",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
osed-connectors = "osed_connectors.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osed_connectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits real external government APIs over the network (deselect with -m 'not live')",
]
